2004-09-01 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/EditPlace.py (on_web_go_clicked): Typo.

2004-08-31  Don Allingham  <dallingham@users.sourceforge.net>
	* src/RelLib.py (GenderStats.guess_gender): back out 
	incorrect patch
	* src/Witness.py: handle new_name error
	* src/SelectPerson.py: remove unused crud left over from
	1.0, grab handle instead of GRAMPS ID

2004-08-31  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Sources.py (SourceTab.redraw, SourceSelector.redraw):
	Use gramps ID instead of handle for display.
	* src/ImageSelect.py (GlobalMediaProperties.display_refs):
	Use gramps ID instead of handle for display.
	* src/ReadXML.py (start_witness): Properly use handle of witness.
	* src/Witness.py (WitnessTab.redraw): Use gramps ID for display;
	(WitnessEditor.remove_itself_from_menu): Typo; 
	(WitnessEditor.ok_clicked): Catch exception and add error dialog.

2004-08-30  Don Allingham  <dallingham@users.sourceforge.net>
	* src/AddMedia.py: use new MediaList update routine
	* src/DisplayModels.py: new update list routine
	* src/ImageSelect.py: use new MediaList update routine
	* src/MediaView.py: use new MediaList update routine
	* src/PlaceView.py: new update list routine
	* src/SourceView.py: new update list routine
	
2004-08-29  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GrampsBSDDB.py: add remove_place function
	* src/DisplayModels.py: added row deletion and updating
	functions
	* src/EditPlace.py: Make a distinction between update and
	new
	* src/EditSource.py: Make a distinction between update and
	new
	* src/PeopleModel.py: remove debugging code
	* src/PlaceView.py: better handling of updating and deleiting
	* src/SourceView.py: better handling of updating and deleiting

2004-08-28  Don Allingham  <dallingham@users.sourceforge.net>
	* src/DbPrompter.py: cleanup dialogs
	* src/EditPerson.py: update screen properly
	* src/PeopleModel.py: handle stored maps correctly
	* src/PeopleView.py: handle stored maps correctly